--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -5,9 +5,9 @@
 
     <!-- You can insert your own image assets here -->
     <item android:drawable="@drawable/splash"/>
-    <!-- <item>
+ <!--    <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+            android:src="@drawable/splash" />
+    </item>-->
 </layer-list>
